适配 OEL 0.0.7